Fix layout issues with table/grid

--- a/src/components/DataTable/DataTable.module.scss
+++ b/src/components/DataTable/DataTable.module.scss
@@ -19,6 +19,7 @@
 
   &PanelGraphic {
     display: flex;
+    margin: -5px;
 
     &Expand {
       display: none;
